--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Image à droite -->
     <div class="text-center">
-      <img src="images/grace.png" alt="Photo de Grâce Soukou"
+      <img src="grace.png" alt="Photo de Grâce Soukou"
         style="border-radius: 20px; width: 450px; height: 450px; object-fit: cover; box-shadow: 0 10px 30px rgba(0,0,0,0.4); border: 6px solid white;">
     </div>
 
@@ -171,7 +171,7 @@
    
 <!-- Projets -->
 <section id="projets" class="py-5 fade-section" style="
-  background-image: url('images/fondprojet.png');
+  background-image: url('fondprojet.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -214,7 +214,7 @@
   <div class="row g-4 justify-content-center">
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-      <img src="images/synthese.png"
+      <img src="synthese.png"
            alt="Synthèse"
            class="img-fluid image-zoom-final"
            onclick="openModal(this)"
@@ -222,7 +222,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-      <img src="images/taches.png"
+      <img src="taches.png"
            alt="Tâches"
            class="img-fluid image-zoom-final"
            onclick="openModal(this)"
@@ -230,7 +230,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-      <img src="images/alerte.png"
+      <img src="alerte.png"
            alt="Alerte"
            class="img-fluid image-zoom-final"
            onclick="openModal(this)"
@@ -238,7 +238,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-      <img src="images/dev.png"
+      <img src="dev.png"
            alt="Développement"
            class="img-fluid image-zoom-final"
            onclick="openModal(this)"
@@ -246,7 +246,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-      <img src="images/rapport.png"
+      <img src="rapport.png"
            alt="Rapport"
            class="img-fluid image-zoom-final"
            onclick="openModal(this)"
@@ -254,7 +254,7 @@
     </div>
 
     <div class="col-12 col-sm-6 col-lg-4 text-center">
-      <img src="images/note.png"
+      <img src="note.png"
            alt="Note de conjoncture"
            class="img-fluid image-zoom-final"
            onclick="openModal(this)"
@@ -318,3 +318,4 @@ function closeModal() {
 
 </body>
 </html>
+
