--- a/page1.html
+++ b/page1.html
@@ -210,12 +210,12 @@
 
   <!-- Images illustratives -->
   <div class="row g-4 justify-content-center">
-    <div class="col-md-4 text-center"><img src="images/2.png" class="image-illustree" alt="Dashboard 1"></div>
-    <div class="col-md-4 text-center"><img src="images/3.png" class="image-illustree" alt="Dashboard 2"></div>
-    <div class="col-md-4 text-center"><img src="images/4.png" class="image-illustree" alt="Graphique 3"></div>
-    <div class="col-md-4 text-center"><img src="images/5.png" class="image-illustree" alt="Graphique 4"></div>
-    <div class="col-md-4 text-center"><img src="images/6.png" class="image-illustree" alt="Graphique 5"></div>
-    <div class="col-md-4 text-center"><img src="images/7.png" class="image-illustree" alt="Graphique 6"></div>
+    <div class="col-md-4 text-center"><img src="2.png" class="image-illustree" alt="Dashboard 1"></div>
+    <div class="col-md-4 text-center"><img src="3.png" class="image-illustree" alt="Dashboard 2"></div>
+    <div class="col-md-4 text-center"><img src="4.png" class="image-illustree" alt="Graphique 3"></div>
+    <div class="col-md-4 text-center"><img src="5.png" class="image-illustree" alt="Graphique 4"></div>
+    <div class="col-md-4 text-center"><img src="6.png" class="image-illustree" alt="Graphique 5"></div>
+    <div class="col-md-4 text-center"><img src="7.png" class="image-illustree" alt="Graphique 6"></div>
   </div>
 </section>
 
@@ -286,7 +286,7 @@
 
   <!-- QR code affiché en grand à droite -->
   <div class="text-center mt-5">
-    <img src="images/code.png" alt="QR Code vers la vidéo de présentation" class="img-fluid image-illustree" style="max-width: 400px;">
+    <img src="code.png" alt="QR Code vers la vidéo de présentation" class="img-fluid image-illustree" style="max-width: 400px;">
     <p class="text-muted mt-2">📽️ Scannez pour voir la vidéo de présentation</p>
   </div>
 </section>
@@ -308,3 +308,4 @@
 
 </body>
 </html>
+
