--- a/page 2.html
+++ b/page 2.html
@@ -74,7 +74,7 @@
 
     <!-- Illustration en bas, bien visible -->
     <div class="text-center mt-4">
-      <img src="images/podcast-illustration.png" alt="Illustration Podcast"
+      <img src="podcast-illustration.png" alt="Illustration Podcast"
            class="img-fluid image-illustree shadow-lg"
            style="width: 100%; max-width: 800px; border-radius: 30px;">
     </div>
@@ -181,7 +181,7 @@
     <!-- Images illustratives (centrées et zoomables) -->
    <!-- Images illustratives -->
 <div class="image-container">
-  <img src="images/R.png" alt="Image R" class="image-full">
+  <img src="R.png" alt="Image R" class="image-full">
 </div>
 
 
@@ -295,10 +295,10 @@
     <!-- Images : carte et conso côte à côte -->
     <div class="d-flex justify-content-center flex-wrap gap-4">
       <div class="image-container">
-        <img src="images/carte.png" alt="Carte consommation" class="image-zoom-final">
+        <img src="carte.png" alt="Carte consommation" class="image-zoom-final">
       </div>
       <div class="image-container">
-        <img src="images/conso.png" alt="Graphique consommation" class="image-zoom-final">
+        <img src="conso.png" alt="Graphique consommation" class="image-zoom-final">
       </div>
     </div>
 
@@ -313,3 +313,4 @@
     Découvrir les projets de BUT 1
   </a>
 </div>
+
