--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Accueil -->
   <header id="accueil" class="container-fluid d-flex align-items-center text-white fade-section"
   style="min-height: 80vh;
-         background-image: url('images/fond-data-grace.png');
+         background-image: url('fond-data-grace.png');
          background-size: cover;
          background-position: center;
          background-repeat: no-repeat;
@@ -318,4 +318,5 @@ function closeModal() {
 
 </body>
 </html>
+
 
